# jax-sklearn

./: .codecov.yml  .coveragerc  .gitignore  CONTRIBUTING.md  COPYING  MANIFEST.in  Makefile  PERFORMANCE_REPORT.md  README.md  README.rst  SECURITY.md  azure-pipelines.yml  meson.build  pyproject.toml  setup.cfg  setup.py  test_jax_performance.py
.binder/: postBuild  requirements.txt
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler-file-extensions.yml  labeler-module.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: arm-unit-tests.yml  artifact-redirector.yml  assign.yml  check-changelog.yml  check-sdist.yml  cuda-ci.yml  emscripten.yml  labeler-module.yml  labeler-title-regex.yml  lint.yml  publish_pypi.yml  update-lock-files.yml  update_tracking_issue.yml  wheels.yml
.spin/: cmds.py
asv_benchmarks/: .gitignore  asv.conf.json
asv_benchmarks/benchmarks/: __init__.py  cluster.py  common.py  datasets.py  decomposition.py  ensemble.py  linear_model.py  manifold.py  metrics.py  model_selection.py  neighbors.py  svm.py  utils.py
benchmarks/: bench_20newsgroups.py  bench_covertype.py  bench_feature_expansions.py  bench_glm.py  bench_glmnet.py  bench_hist_gradient_boosting.py  bench_hist_gradient_boosting_adult.py  bench_hist_gradient_boosting_categorical_only.py  bench_hist_gradient_boosting_higgsboson.py  bench_hist_gradient_boosting_threading.py  bench_isolation_forest.py  bench_isolation_forest_predict.py  bench_isotonic.py  bench_kernel_pca_solvers_time_vs_n_components.py  bench_kernel_pca_solvers_time_vs_n_samples.py  bench_lasso.py  bench_lof.py  bench_mnist.py  bench_multilabel_metrics.py  bench_online_ocsvm.py  bench_pca_solvers.py  bench_plot_fastkmeans.py  bench_plot_hierarchical.py  bench_plot_incremental_pca.py  bench_plot_lasso_path.py  bench_plot_neighbors.py  bench_plot_nmf.py  bench_plot_omp_lars.py  bench_plot_parallel_pairwise.py  bench_plot_polynomial_kernel_approximation.py  bench_plot_randomized_svd.py  bench_plot_svd.py  bench_plot_ward.py  bench_random_projections.py  bench_rcv1_logreg_convergence.py  bench_saga.py  bench_sample_without_replacement.py  bench_sgd_regression.py  bench_sparsify.py  bench_text_vectorizers.py  (+5 more)
build_tools/: check-meson-openmp-dependencies.py  generate_authors_table.py  get_comment.py  linting.sh  shared.sh  update_environments_and_lock_files.py
build_tools/azure/: get_selected_tests.py  install.sh  posix-docker.yml  posix.yml  pytest-pyodide.js  python_nogil_lock.txt  python_nogil_requirements.txt  test_docs.sh  test_pytest_soft_dependency.sh  test_script.sh  test_script_pyodide.sh  upload_codecov.sh  windows.yml
build_tools/circle/: build_doc.sh  list_versions.py  push_doc.sh
build_tools/cirrus/: arm_wheel.yml  build_test_arm.sh
build_tools/github/: build_minimal_windows_image.sh  build_source.sh  build_test_arm.sh  create_gpu_environment.sh  test_source.sh  test_windows_wheels.sh  upload_anaconda.sh  vendor.py
build_tools/travis/: install_main.sh  test_script.sh
build_tools/wheels/: LICENSE_linux.txt  LICENSE_macos.txt  LICENSE_windows.txt  build_wheels.sh  check_license.py  test_wheels.sh
doc/: Makefile  README.md  about.rst  api_reference.py  common_pitfalls.rst  computing.rst  conf.py  conftest.py  data_transforms.rst  datasets.rst  faq.rst  getting_started.rst  glossary.rst  governance.rst  hardware_guide.rst  index.rst.template  inspection.rst  install.rst  install_instructions_conda.rst  jax_features.rst  make.bat  metadata_routing.rst  model_persistence.rst  presentations.rst  related_projects.rst  roadmap.rst  support.rst  visualizations.rst  whats_new.rst
doc/api/: deprecated.rst.template  index.rst.template  module.rst.template
doc/computing/: computational_performance.rst  parallelism.rst  scaling_strategies.rst
doc/datasets/: loading_other_datasets.rst  real_world.rst  sample_generators.rst  toy_dataset.rst
doc/developers/: advanced_installation.rst  bug_triaging.rst  contributing.rst  cython.rst  develop.rst  maintainer.rst  maintainer.rst.template  minimal_reproducer.rst  performance.rst  plotting.rst  tips.rst  utilities.rst
doc/images/: ml_map.README.rst
doc/logos/: README.md  brand-showcase.html
doc/modules/: array_api.rst  biclustering.rst  calibration.rst  classification_threshold.rst  clustering.rst  compose.rst  covariance.rst  cross_decomposition.rst  cross_validation.rst  decomposition.rst  density.rst  ensemble.rst  feature_extraction.rst  feature_selection.rst  gaussian_process.rst  grid_search.rst  impute.rst  isotonic.rst  kernel_approximation.rst  kernel_ridge.rst  lda_qda.rst  learning_curve.rst  linear_model.rst  manifold.rst  metrics.rst  mixture.rst  model_evaluation.rst  multiclass.rst  naive_bayes.rst  neighbors.rst  neural_networks_supervised.rst  neural_networks_unsupervised.rst  outlier_detection.rst  partial_dependence.rst  permutation_importance.rst  preprocessing.rst  preprocessing_targets.rst  random_projection.rst  semi_supervised.rst  sgd.rst  (+3 more)
doc/scss/: colors.scss  custom.scss  index.scss
doc/templates/: index.html  (+1 more)
examples/: README.txt
maint_tools/: bump-dependencies-versions.py  check_pxd_in_installation.py  check_xfailed_checks.py  sort_whats_new.py  vendor_array_api_compat.sh  vendor_array_api_extra.sh  whats_missing.sh
scripts/: batch_migrate_phase2.py  expand_more_algorithms.sh  generate_all_fl.sh  generate_all_sl.sh  migrate_phase2.sh  migrate_phase3.sh
sklearn/: __init__.py  _isotonic.pyx  base.py  calibration.py  conftest.py  discriminant_analysis.py  dummy.py  isotonic.py  kernel_approximation.py  kernel_ridge.py  multiclass.py  multioutput.py  naive_bayes.py  pipeline.py  random_projection.py  setup.py
xlearn/: __init__.py  _config.py  _distributor_init.py  _isotonic.pyx  _min_dependencies.py  base.py  calibration.py  conftest.py  discriminant_analysis.py  dummy.py  exceptions.py  isotonic.py  kernel_approximation.py  kernel_ridge.py  meson.build  multiclass.py  multioutput.py  naive_bayes.py  pipeline.py  random_projection.py
(+1442 files in other folders)
